--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "menti-unq-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
     "@emotion/react": "^11.10.4",
