--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.37",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
