--- a/.github/workflows/ci.config.yml
+++ b/.github/workflows/ci.config.yml
@@ -25,3 +25,16 @@ jobs:
       - run: npm test
         env:
           CI: true
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: --experimental-modules
+    steps:
+      - uses: actions/checkout@v2
+        name: Run linting for project
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - run: npm install
+      - run: npm run lint-ci
