--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-wordcloud": "^1.2.7",
     "sweetalert2": "^11.4.37",
     "web-vitals": "^2.1.4"
   },
